# Alfanumrik

./: .dockerignore  .env.example  .env.local.example  .eslintrc.ai-boundary.json  .eslintrc.json  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  API_CONTRACTS_MATRIX.md  ARCHITECTURE.md  Alfanumrik_Developer_Docket.md  Alfanumrik_PreSeed_Investor_Deck.pptx  CLAUDE.md  CURRENT_ARCHITECTURE_AUDIT.md  DATA_OWNERSHIP_MATRIX.md  DEPLOY.sh  DEPLOYMENT_RUNBOOK.md  DOMAIN_BOUNDARIES.md  Dockerfile  EMAIL_DELIVERABILITY.md  ENVIRONMENT_SETUP.md  EVENT_CATALOG.md  FEATURE_FLAGS_SYNC.md  FLAGS_QUICKSTART.md  LAUNCH_CHECKLIST.md  LICENSE  MICROSERVICES_EXTRACTION_PLAN.md  MIGRATION_AND_ROLLBACK_PLAN.md  README.md  README_LOCAL.md  RISK_REGISTER.md  SUPABASE_DASHBOARD_SETUP.md  alfanumrik_launch_readiness_2026-05-05.html  api_server.py  build_docket.js  cbse_cli.py  compose.debug.yaml  compose.yaml  conftest.py  (+39 more)
python/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python/deploy/: service.yaml
python/services/ai/: __init__.py  config.py
python/services/ai/api/: __init__.py  auth.py  health.py  limiter.py  main.py
python/services/ai/api/v1/: __init__.py  bulk_non_mcq_gen.py  bulk_question_gen.py  classify.py  extract_ncert_questions.py  foxy_tutor.py  generate.py  generate_answers.py  generate_concepts.py  grade_experiment_conclusion.py  monthly_synthesis_builder.py  nep_compliance.py  parent_report_generator.py  verify_question_bank.py  voice.py
python/services/ai/business/: __init__.py
python/services/ai/business/bulk_non_mcq_gen/: __init__.py  auth.py  handler.py  models.py
python/services/ai/business/bulk_question_gen/: __init__.py  auth.py  generator.py  handler.py  models.py  ops_events.py  oracle.py  prompts.py  repository.py  validator.py
python/services/ai/business/cme_engine/: __init__.py  handler.py  models.py  router.py
python/services/ai/business/extract_ncert_questions/: __init__.py  auth.py  handler.py  (+2 more)
python/services/ai/db/: __init__.py  supabase.py
python/services/ai/mol/: __init__.py  breaker.py  cache.py  classifier.py  cost.py  cost_cap.py  errors.py  feature_flag.py  foxy_structured_prompt.py  grader.py  grader_cron.py  orchestrator.py  post_processor.py  prompt_builder.py  redis_client.py  router.py  telemetry.py  types.py  use_cases.py
python/services/ai/observability/: __init__.py  logger.py  sentry.py
python/services/ai/shared/: __init__.py  budget_guard.py  idempotency.py  quiz_oracle.py  retry.py
python/tests/: conftest.py
python/tests/integration/: test_bulk_question_gen_endpoint.py  test_classify_endpoint.py  test_generate_answers_endpoint.py  test_generate_concepts_endpoint.py  test_generate_endpoint.py  test_generate_stream_endpoint.py  test_protected_ai_routes.py  test_routing_parity.py  test_voice_endpoint.py  test_voice_synthesize_endpoint.py
python/tests/unit/: test_api_auth.py  test_app_imports.py  test_breaker.py  test_bulk_non_mcq_gen_models.py  test_bulk_question_gen_auth.py  test_bulk_question_gen_generator.py  test_bulk_question_gen_handler.py  test_bulk_question_gen_oracle.py  test_bulk_question_gen_validator.py  test_cache.py  test_cost.py  test_cost_cap.py  test_eval_harness.py  test_extract_ncert_questions_models.py  test_feature_flag.py  test_foxy_perception_classifier.py  test_foxy_perception_models.py  test_foxy_structured_prompt.py  test_generate_answers_auth.py  test_generate_answers_generator.py  test_generate_answers_handler.py  test_generate_answers_models.py  test_generate_answers_prompts.py  test_generate_answers_repository.py  test_generate_answers_validator.py  test_generate_concepts_auth.py  test_generate_concepts_generator.py  test_generate_concepts_handler.py  test_generate_concepts_models.py  test_generate_concepts_normalize.py  test_generate_concepts_ops_events.py  test_generate_concepts_prompts.py  test_generate_concepts_repository.py  test_generate_concepts_validator.py  test_generator.py  test_grade_experiment_conclusion_scoring.py  test_math_verify_handler.py  test_monthly_synthesis_builder_bundle.py  test_monthly_synthesis_builder_models.py  test_nep_compliance_mapping.py  (+19 more)
(+7386 files in other folders)
